tests/sksl/errors/ConstructorArgumentCount.dsl.glsl
### Compilation failed:

error: invalid arguments to 'float3' constructor (expected 3 scalars, but found 2)

error: invalid arguments to 'float3' constructor (expected 3 scalars, but found 4)

error: invalid argument to 'bool' constructor (expected a number or bool, but found 'int3')

3 errors
